--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,30 @@
 
 	<build>
 		<plugins>
+		
+		<plugin>
+		  <groupId>org.mule.tools.maven</groupId>
+		  <artifactId>mule-maven-plugin</artifactId>
+		  <version>2.2.1</version>
+		  <configuration>
+		      <deploymentType>cloudhub</deploymentType>
+		       <!-- muleVersion is the runtime version as it appears on the CloudHub interface -->
+		        <muleVersion>3.9.1</muleVersion>
+		        <username>naresh_m</username>
+		        <password>Whishworks12!@</password>
+		        <redeploy>true</redeploy>
+		        <environment>Production</environment>
+		    </configuration>
+		    <executions>
+		        <execution>
+		            <id>deploy</id>
+		            <phase>deploy</phase>
+		            <goals>
+		                <goal>deploy</goal>
+		            </goals>
+		        </execution>
+		    </executions>
+		</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
